[package]
authors = ["Jonathan Moore <moore@eds.org>"]
categories = ["wasm"]
description = "Bound number of instructions that can be execuited by a wasm module"
edition = "2018"
keywords = [
    "bounded-execution",
    "webassembly",
    ]
license = "Apache-2.0/MIT"
name = "wasm-bound"
readme = "./README.md"
repository = "https://github.com/moore/wasm-budget"
version = "0.1.0"

[[bin]]
doc = false
name = "wasm-bound"
path = "src/bin/wasm-bound.rs"
required-features = ["exe"]

[dependencies]
failure = "0.1.5"
walrus = "0.4.0"
regex = "1.1.0"
rayon = "1.0.3"

[dependencies.clap]
optional = true
version = "2.32.0"

[features]
default = ["exe"]
exe = ["clap"]

[dev-dependencies]
assert_cmd = "0.11.0"
